# pg_relational_transfer

./: .gitignore  AUTHORS  README.md  pyproject.toml
src/: __main__.py
src/cli/: __init__.py  commands.py
src/common/: enums.py  errors.py
src/config/: __init__.py  default.py  local.py  test.py
src/data_writers/: __init__.py  async_writer_via_fdw.py  sync_writer_via_fdw.py  writer_protocol.py  writer_to_file.py
src/database/: async_connection_pool.py  foreign_data_wrapper.py  metadata_utils.py
src/database/connectors/: __init__.py  async_connector.py  sync_connector.py
src/graph_rules/: __init__.py  data_graph_rules.py  rule_loader.py  rule_managers.py  table_graph_rules.py
src/graph_walkers/: __init__.py  async_data_walker.py  sync_data_walker.py  table_walker.py  walker_protocol.py
src/graphs/: data_node.py  table_graph.py
src/node_keepers/: __init__.py  node_keeper.py  node_queue.py
src/task_managers/: __init__.py  data_manager.py  schema_manager.py
src/utils/: asyncio_helpers.py  logs.py  parse_dsn.py  retry_managers.py  safe_merge.py  timer.py
